add 4 friend apis
